some color changes

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -12,8 +12,10 @@
 
 // Colors -----------------------------------
 @hue-1:   hsl(198, 99%, 37%); // <-cyan
-@hue-2:   hsl(221, 87%, 60%); // <-blue
-@hue-3:   hsl(301, 63%, 40%); // <-purple
+// @hue-2:   hsl(221, 87%, 60%); // <-blue
+@hue-2:   hsl(216, 92%, 41%); // <-blue
+
+@hue-3:   hsl(301, 88%, 29%); // <-purple
 @hue-4:   hsl(119, 34%, 47%); // <-green
 
 @hue-5:   hsl(  5, 74%, 59%); // <-red 1
